--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-	<meta name="description" content="IT Academy Shop Excercise - Sprint 2.2" />
+	<meta name="description" content="IT Academy Shop - Sprint 2.2" />
 	<meta name="author" content="Fran Palmero" />
 	<title>IT Academy Shop</title>
 	<!-- Favicon-->
@@ -20,7 +20,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="50">
 	<!-- Navigation-->
-	<nav class="navbar bg-white fixed-top bg-white navbar-expand-lg" id="navbar-example2">
+	<nav class="navbar fixed-top navbar-light bg-light navbar-expand-lg" id="navbar-example2">
 		<div class="container d-flex">
 			<a class="navbar-brand" href="index.html">ShopNow</a>
 			<div class="d-flex flex-row order-lg-last align-items-center">
@@ -233,7 +233,7 @@
 	<!-- Footer-->
 	<footer class="py-3 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your Website 2024</p>
+			<p class="m-0 text-center text-white">Copyright &copy; IT Academy Shop - 2024</p>
 		</div>
 	</footer>
 
@@ -256,24 +256,6 @@
 							</tr>
 						</thead>
 						<tbody id="cart_list">
-							<tr>
-								<th scope="row">Cooking oil</th>
-								<td>$10.5</td>
-								<td>2</td>
-								<td>$21</td>
-							</tr>
-							<tr>
-								<th scope="row">Pasta</th>
-								<td>$6.25</td>
-								<td>1</td>
-								<td>$6.25</td>
-							</tr>
-							<tr>
-								<th scope="row">Lawn dress</th>
-								<td>$15</td>
-								<td>3</td>
-								<td>$45</td>
-							</tr>
 						</tbody>
 					</table>
 					<div class="text-center fs-3">
