--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
+	<!-- Styles -->
+	<link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="50">
@@ -79,6 +82,7 @@
 						<img class="card-img-top" src="./images/product.svg" alt="..." />
 						<div class="card-body p-4">
 							<div class="text-center">
+								<span class="alert alert-info">+3u. Offer!</span>
 								<h5 class="fw-bolder">Cooking Oil</h5>
 								$10.5
 							</div>
@@ -109,6 +113,7 @@
 						<img class="card-img-top" src="./images/product.svg" alt="..." />
 						<div class="card-body p-4">
 							<div class="text-center">
+								<span class="alert alert-info">+10u. Offer!</span>
 								<h5 class="fw-bolder">Instant cupcake mixture</h5>
 								$5
 							</div>
