Add Products Discount %
- Include % for discount products.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<img class="card-img-top" src="./images/product.svg" alt="..." />
 						<div class="card-body p-4">
 							<div class="text-center">
-								<span class="alert alert-info">+3u. Offer!</span>
+								<span class="alert alert-info">+3u. 20% Discount!</span>
 								<h5 class="fw-bolder">Cooking Oil</h5>
 								$10.5
 							</div>
@@ -113,7 +113,7 @@
 						<img class="card-img-top" src="./images/product.svg" alt="..." />
 						<div class="card-body p-4">
 							<div class="text-center">
-								<span class="alert alert-info">+10u. Offer!</span>
+								<span class="alert alert-info">+10u. 30% Discount!</span>
 								<h5 class="fw-bolder">Instant cupcake mixture</h5>
 								$5
 							</div>
