--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 	</nav>
 
 	<!-- Header-->
-	<header class="bg-dark py-5">
+	<header class="bg-dark py-5 shop_header">
 		<div class="container my-5"><br></div>
 		<div class="container px-4 px-lg-5 my-5">
-			<div class="text-center text-white">
+			<div class="text-center text-black banner">
 				<h1 class="display-4 fw-bolder">IT Academy Shop</h1>
-				<p class="lead fw-normal text-white-50 mb-0">Get up to 50% off Today Only!</p>
+				<p class="lead fw-normal text-black-50 mb-0">Get up to 50% off Today Only!</p>
 			</div>
 		</div>
 	</header>
